--- a/index.html
+++ b/index.html
@@ -70,6 +70,23 @@ ul.task-list li input[type="checkbox"] {
 
 
 <p>These are all the materials from the coreR Course (October 2024). You have to render in order to create the html.</p>
+<section id="course-lessons" class="level2">
+<h2 class="anchored" data-anchor-id="course-lessons">Course Lessons</h2>
+<ul>
+<li><a href="script/quick_analysis.html">Intro to Literate Analysis</a></li>
+<li><a href="script/cleaning_and_wrangling.html">Cleaning and Wrangling data</a></li>
+<li>Data Visualization</li>
+<li>Functions</li>
+</ul>
+</section>
+<section id="practice-sessions" class="level2">
+<h2 class="anchored" data-anchor-id="practice-sessions">Practice Sessions</h2>
+<ul>
+<li>Practice I</li>
+<li>Practice II</li>
+<li>Practice III</li>
+</ul>
+</section>
 
 </main>
 <!-- /main column -->
