--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@ ul.task-list li input[type="checkbox"] {
 <section id="course-lessons" class="level2">
 <h2 class="anchored" data-anchor-id="course-lessons">Course Lessons</h2>
 <ul>
-<li><a href="script/quick_analysis.html">Intro to Literate Analysis</a></li>
-<li><a href="script/cleaning_and_wrangling.html">Cleaning and Wrangling data</a></li>
+<li><a href="script/quick-analysis.html">Intro to Literate Analysis</a></li>
+<li><a href="script/cleaning%20_and_wrangling.html">Cleaning and Wrangling data</a></li>
 <li>Data Visualization</li>
 <li>Functions</li>
 </ul>
